# Agentic-Ai-Projects

Job_Post_Creator/: Documentation.docx  README.md  agents.yaml  crew.py  job_posting.md  main.py  pyproject.toml  tasks.yaml
